--- a/tests/data/kubeconfig_sample.yaml
+++ b/tests/data/kubeconfig_sample.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 clusters:
 - cluster:
-    certificate-authority-data: [REDACTED]
-    server: https://c2.us-east.containers.cloud.ibm.com:22920
-  name: experimental-us/c13pv67w0k8ds6a6f2t0
+    certificate-authority-data: REDACTED
+    server: https://c111.us-south.containers.cloud.ibm.com:30602
+  name: analog/buhpn9cd01dfrf8cckf0
 contexts:
 - context:
-    cluster: experimental-us/c13pv67w0k8ds6a6f2t0
+    cluster: analog/buhpn9cd01dfrf8cckf0
     namespace: default
-    user: javier.juarez.martinez@ibm.com/3f0eacee15cc4551a4b51313a4a1f2d2/iam.cloud.ibm.com-identity
-  name: experimental-us
-current-context: experimental-us
+    user: javier.juarez.martinez@ibm.com/045077ab9f1a4dcfafa2c58389d3d639/iam.cloud.ibm.com-identity
+  name: analog/buhpn9cd01dfrf8cckf0
+current-context: analog/buhpn9cd01dfrf8cckf0
 kind: Config
 preferences: {}
 users:
-- name: javier.juarez.martinez@ibm.com/3f0eacee15cc4551a4b51313a4a1f2d2/iam.cloud.ibm.com-identity
+- name: javier.juarez.martinez@ibm.com/045077ab9f1a4dcfafa2c58389d3d639/iam.cloud.ibm.com-identity
   user:
     auth-provider:
       config:
         client-id: kube
         client-secret: kube
-        id-token: [REDACTED]
+        id-token: REDACTED
         idp-issuer-url: https://iam.cloud.ibm.com/identity
-        refresh-token: [REDACTED]
+        refresh-token: REDACTED
       name: oidc
 
