A new set of test files

--- a/tests/data/kubeconfig_several_contexts.yaml
+++ b/tests/data/kubeconfig_several_contexts.yaml
@@ -11,6 +11,11 @@ contexts:
       namespace: default
       user: javier.juarez.martinez@ibm.com/045077ab9f1a4dcfafa2c58389d3d639/iam.cloud.ibm.com-identity
     name: analog/buhpn9cd01dfrf8cckf0
+  - context:
+      cluster: analog/buhpn9cd01dfrf8cckf0
+      namespace: test
+      user: javier.juarez.martinez@ibm.com/045077ab9f1a4dcfafa2c58389d3d639/iam.cloud.ibm.com-identity
+    name: analog-test/buhpn9cd01dfrf8cckf0
 current-context: analog/buhpn9cd01dfrf8cckf0
 kind: Config
 preferences: {}
