--- a/tests/data/kubeconfig_without_contexts.yaml
+++ b/tests/data/kubeconfig_without_contexts.yaml
@@ -5,13 +5,7 @@ clusters:
       certificate-authority-data: REDACTED
       server: https://c111.us-south.containers.cloud.ibm.com:30602
     name: analog/buhpn9cd01dfrf8cckf0
-contexts:
-  - context:
-      cluster: analog/buhpn9cd01dfrf8cckf0
-      namespace: default
-      user: javier.juarez.martinez@ibm.com/045077ab9f1a4dcfafa2c58389d3d639/iam.cloud.ibm.com-identity
-    name: analog/buhpn9cd01dfrf8cckf0
-current-context: analog/buhpn9cd01dfrf8cckf0
+contexts: []
 kind: Config
 preferences: {}
 users:
