--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 ---
-name: Pipeline
+name: Ci
 
 on:
   push:
@@ -17,8 +17,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1.16'
+          go-version: '^1.21'
       - run: go version
+
+      - name: Lint
+        run: make lint
 
       - name: Build
         run: make build
