--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,5 +1,5 @@
 ---
-name: Ci
+name: Build & Tests
 
 on:
   push:
@@ -20,11 +20,14 @@ jobs:
           go-version: '^1.21'
       - run: go version
 
-      - name: Lint
-        run: make lint
-
       - name: Build
         run: make build
-
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.21'
       - name: Test
         run: make test
