fix: A bug i the ldflags configuration

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,7 @@ builds:
       - linux
       - darwin
     ldflags:
-      - -s -w -X"github.com/jjuarez/iks-ctx-cleaner/cmd.Version='v{{ .Version }}'"
+      - -s -w -X github.com/jjuarez/iks-ctx-cleaner/cmd.Version='v{{ .Version }}'
 
 archives:
   - format: tar.gz
